Add tmux shortcut for frequently-used git combo

--- a/tmux.conf
+++ b/tmux.conf
@@ -116,3 +116,7 @@ set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd
 # Use mouse to copy to system clipboard
 set -g set-clipboard off
 bind -T copy-mode MouseDragEnd1Pane send -X copy-pipe "xclip -selection clipboard -i"
+
+# Use ctrl+g for the frequently-used git combo
+bind -n C-g send-keys "git log -3" C-m "git status" C-m
+
