Tmux: Open new window/pane at current directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -89,7 +89,7 @@ bind r source-file ~/.tmux.conf
 set -g mouse on
 
 # Use alt-shift- for window commands
-bind -n M-C new-window
+bind -n M-C new-window -c "#{pane_current_path}"
 bind -n M-W choose-window
 bind -n M-K kill-window
 bind -n M-S-Left previous-window
@@ -98,8 +98,8 @@ bind -n M-S-Pageup swap-window -t -1
 bind -n M-S-Pagedown swap-window -t +1
 
 # Use alt- for pane commands
-bind -n M-h split-window -h
-bind -n M-v split-window -v
+bind -n M-h split-window -h -c "#{pane_current_path}"
+bind -n M-v split-window -v -c "#{pane_current_path}"
 bind -n M-k kill-pane
 bind -n M-z resize-pane -Z
 bind -n M-Left select-pane -L
