Add shortcut to clear pane history to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,7 @@
 # alt-Arrow                 Switch to some other pane
 # alt-PageUp                Swap current pane with the previous one
 # alt-PageDown              Swap current pane with the next one
+# ctrl-alt-shift-k          Clear all history from current pane
 #
 # Mouse usage:
 # ============
@@ -108,6 +109,9 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 bind -n M-Pageup swap-pane -U
 bind -n M-Pagedown swap-pane -D
+
+# Use ctrl+alt+shift+k to wipe all pane history
+bind -n C-M-K clear-history
 
 # Use current directory to automatically name tmux windows
 set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
