Use Alt-G for git combo in tmux
Ctrl-G is colliding with the command to show file info in Vim.
So we use Alt-G for the git combo instead.

--- a/tmux.conf
+++ b/tmux.conf
@@ -121,6 +121,5 @@ set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd
 set -g set-clipboard off
 bind -T copy-mode MouseDragEnd1Pane send -X copy-pipe "xclip -selection clipboard -i"
 
-# Use ctrl+g for the frequently-used git combo
-bind -n C-g send-keys "git log -3" C-m "git status" C-m
-
+# Use alt+g for the frequently-used git combo
+bind -n M-g send-keys "git log -3" C-m "git status" C-m
