Change tmux prefix from Ctrl+Z back to Ctrl+B
Ctrl+Z collides with the shortcut to put the current running process to
the background. Ctrl+B on the other hand has no other bindings at the
moment, and it's also the default prefix binding used by tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@
 #
 # Prefix:
 # =======
-# ctrl-z
+# ctrl-b
 #
 # Miscellaneous commands:
 # =======================
@@ -68,8 +68,8 @@
 #
 ######################################################################################
 
-# Change prefix binding from ctrl-b to ctrl-z
-set-option -g prefix C-z
+# Use ctrl-b as the prefix
+set-option -g prefix C-b
 
 # Prevent tmux error message from disappear to quickly
 set -g display-time 4000
