Add keyboard shortcut to rename tmux window
Tmux winow is currently renamed automatically based on current working
directory. This is quite annoying, especially when we change directories
often. Instead, it's better if we provide a shortcut to easily rename
the window (alt+shift+r sounds like a good choice here).

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,7 @@
 #
 # Window commands:
 # ================
+# alt-shift-r               Rename the current window
 # alt-shift-c               Create a new window
 # alt-shift-w               Choose a window to switch to
 # alt-shift-k               Kill the current window
@@ -61,10 +62,9 @@
 #   - Step 3: Use ctrl-shift-c to copy, and ctrl-shift-v to paste.
 #   - Note that this method unfortunately doesn't allow us to scroll and highlight simulatenously.
 #
-# NOTE:
-# =====
-# (*) Despite customizations above, many default tmux key bindings still work.
-# (*) See more here: https://unix.stackexchange.com/questions/175421/default-tmux-config/175440#175440
+# Default key bindings:
+# =====================
+# http://cvsweb.openbsd.org/cgi-bin/cvsweb/src/usr.bin/tmux/key-bindings.c?rev=1.43&content-type=text/x-cvsweb-markup
 #
 ######################################################################################
 
@@ -90,6 +90,7 @@ bind r source-file ~/.tmux.conf
 set -g mouse on
 
 # Use alt-shift- for window commands
+bind -n M-R command-prompt "rename-window '%%'"
 bind -n M-C new-window -c "#{pane_current_path}"
 bind -n M-W choose-window
 bind -n M-K kill-window
@@ -112,10 +113,6 @@ bind -n M-Pagedown swap-pane -D
 
 # Use ctrl+alt+shift+k to wipe all pane history
 bind -n C-M-K clear-history
-
-# Use current directory to automatically name tmux windows
-set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
-set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
 
 # Use mouse to copy to system clipboard
 set -g set-clipboard off
