Improve copy and paste in tmux
Copy and paste entirely with mouse can be difficult when the amount of
content to copy is large. So this commit adds support for copying with
the keyboard as well, using the vim copy mode. Instructions are also
added accordingly.

--- a/tmux.conf
+++ b/tmux.conf
@@ -46,17 +46,28 @@
 # - Mouse can be used to scroll, resize pane, or choose window/pane.
 # - Mouse can also be used to highlight and copy a selected section (see below).
 #
-# Copy and paste (in Ubuntu):
-# ===========================
-# If you use tmux locally:
-#   - Make sure you have xclip locally installed.
-#   - Mouse can be used to copy, by highlighting the region that you want to copy.
-#   - To exit copy mode, simply press Escape and wait for a short delay.
+# Copy and paste to local system clipboard (xclip is required):
+# =============================================================
+# Using mouse:
+#   - Use mouse click and scroll to highlight the region you want to copy.
+#   - Highlighted region is copied directly to system clipboard (no action required).
+#   - Exit copy mode by pressing Escape.
+# Using keyboard:
+#   - Enter copy mode with prefix-v
+#   - Start highlighting the region you want to copy.
+#   - Use arrow keys to navigate to where you want to start highlighting.
+#   - Press Space to start the highlight, and then arrow keys to expand the region.
+#   - Alternatively, you can also use ctrl-a to highlight all text in the pane.
+#   - Finally, press 'y' to yank to system clipboard, and exit copy mode with Escape.
+# Note that both mouse and keyboard can be mixed and used at the same time.
+#
+# Some caveats with copy and paste:
+# =================================
 # If you use tmux over ssh:
 #   - Make sure you have xclip installed on the ssh server.
 #   - Log into ssh using -X option: "ssh -X remoteuser@remotehost".
 #   - You can now copy as if you are using tmux locally.
-# If xclip is not available, then we must use system clipboard directly:
+# If xclip is not available, then we must use the standard terminal shortcuts:
 #   - Step 1: Zoom the current pane to full screen (alt-z as shown above).
 #   - Step 2: Hold shift, and drag the mouse to highlight the region that you want to copy.
 #   - Step 3: Use ctrl-shift-c to copy, and ctrl-shift-v to paste.
@@ -114,9 +125,13 @@ bind -n M-Pagedown swap-pane -D
 # Use ctrl+alt+shift+k to wipe all pane history
 bind -n C-M-K clear-history
 
-# Use mouse to copy to system clipboard
+# Configure the vim copy mode to allow copy with both mouse and keyboard
 set -g set-clipboard off
-bind -T copy-mode MouseDragEnd1Pane send -X copy-pipe "xclip -selection clipboard -i"
+set -g mode-keys vi
+bind v copy-mode
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "xclip -in -selection clipboard"
+bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -in -selection clipboard"
+bind -T copy-mode-vi C-a send-keys ggVG
 
 # Use alt+g for the frequently-used git combo
 bind -n M-g send-keys "git log -3" C-m "git status" C-m
