Prevent usage of Esc in Tmux
Using <Esc> key can interfere with Vim, so we turn it off on Tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -91,6 +91,9 @@ set -g default-terminal "xterm-256color"
 # Store history for a long time
 set -g history-limit 50000
 
+# Prevent Esc from being used to recognize function keys
+set -s escape-time 0
+
 # Automatically re-number the windows when closing older ones
 set -g renumber-windows on
 
