TMUX: Increase history limit & Hide status-right

--- a/tmux.conf
+++ b/tmux.conf
@@ -89,7 +89,7 @@ set -g display-time 4000
 set -g default-terminal "xterm-256color"
 
 # Store history for a long time
-set -g history-limit 50000
+set -g history-limit 90000
 
 # Prevent Esc from being used to recognize function keys
 set -s escape-time 0
@@ -102,6 +102,9 @@ bind r source-file ~/.tmux.conf
 
 # Allow to use mouse interaction
 set -g mouse on
+
+# Remove all info on the right of the status bar
+set -g status-right ''
 
 # Use alt-shift- for window commands
 bind -n M-R command-prompt "rename-window '%%'"
